--- a/css/frase.css
+++ b/css/frase.css
@@ -1,4 +1,33 @@
 .frase {
     background-color: var(--roxo);
-    padding: 6em;
+    padding: 6em 0;
+}
+
+.frase-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+}
+
+.frase-content img {
+    width: 160px;
+}
+
+.frase-content p {
+    color: var(--branco);
+    font-weight: 500;
+    font-size: 24px;
+    text-align: center;
+}
+
+@media screen and (min-width: 1024px) {
+    .frase-content {
+        flex-direction: row;
+    }
+
+    .frase-content img {
+        width: 240px;
+    }
 }
