adicionando botão voltar ao topo e scroll suave na página

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import url(../css/perfil.css);
 @import url(../css/frase.css);
 @import url(../css/footer.css);
+@import url(../css/scrollTopo.css);
 
 @import url("https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css");
 
